redisplayed nav-bar elements on account page, fixed line spacing

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -85,7 +85,7 @@ nav a:hover {
 }
 
 #usercircle:hover {
-	box-shadow: inset 0 0 5px white;
+	box-shadow: inset 0 0 15px white;
 }
 
 .row.content {
